test/types/records/const-checking/assign-to-tuple-element.good
assign-to-tuple-element.chpl:5: In function 'tupfn':
assign-to-tuple-element.chpl:6: error: const actual is passed to 'ref' formal 'a' of =
note: to formal of type int(64)
